Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h2>
 <a id="简介" class="anchor" href="#%E7%AE%80%E4%BB%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>简介</h2>
 
-<p>欢迎访问CAS Server Lab，旨在解决集成SSO中常用的场景分析及技术解决方案，如有问题欢迎大家随时提交issue。</p>
+<p>欢迎访问CAS Server Lab，旨在解决集成SSO中常用的场景分析及技术解决方案；</p>
 
 <h2>
 <a id="环境" class="anchor" href="#%E7%8E%AF%E5%A2%83" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>环境</h2>
@@ -38,17 +38,23 @@ base on Cas 4.0.0
 <a id="v0001" class="anchor" href="#v0001" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>v0.0.0.1</h3>
 
 <ul>
-<li>[x] <a href="https://github.com/waterWang/cas-server-lab/tree/release-v0.0.0.1">CAS服务端演示</a><br>
-1.登录地址：https://localhost:8443/cas/login （admin/admin）</li>
+<li>
+<p>[x] <a href="https://github.com/waterWang/cas-server-lab/tree/release-v0.0.0.1">CAS服务端演示</a>    </p>
+
+<p>1.登录地址：https://localhost:8443/cas/login （admin/admin）</p>
+</li>
 </ul>
 
 <h3>
 <a id="v0002" class="anchor" href="#v0002" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>v0.0.0.2</h3>
 
 <ul>
-<li>[x] <a href="https://github.com/waterWang/cas-server-lab/tree/release-v0.0.0.2">支持数据库连接，从DB中验证密码</a><br>
-1.DB连接： HikariCP<br>
-2.加密方式：security的BCryptPasswordEncoder</li>
+<li>
+<p>[x] <a href="https://github.com/waterWang/cas-server-lab/tree/release-v0.0.0.2">支持数据库连接，从DB中验证密码</a>  </p>
+
+<p>1.DB连接池： <a href="http://www.oschina.net/p/hikaricp">HikariCP</a><br>
+2.加密算法：Spring Security的BCrypt</p>
+</li>
 </ul>
 
 <h3>
@@ -60,16 +66,13 @@ base on Cas 4.0.0
 </ul>
 
 <h5>
-<a id="参考文献-httpswikijasigorgdisplaycasumrestfulapi" class="anchor" href="#%E5%8F%82%E8%80%83%E6%96%87%E7%8C%AE-httpswikijasigorgdisplaycasumrestfulapi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>参考文献 <a href="https://wiki.jasig.org/display/CASUM/RESTful+API">https://wiki.jasig.org/display/CASUM/RESTful+API</a>
+<a id="参考文献--httpswikijasigorgdisplaycasumrestfulapi" class="anchor" href="#%E5%8F%82%E8%80%83%E6%96%87%E7%8C%AE--httpswikijasigorgdisplaycasumrestfulapi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>参考文献  <a href="https://wiki.jasig.org/display/CASUM/RESTful+API">https://wiki.jasig.org/display/CASUM/RESTful+API</a>
 </h5>
 
 <h2>
 <a id="意见反馈" class="anchor" href="#%E6%84%8F%E8%A7%81%E5%8F%8D%E9%A6%88" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>意见反馈</h2>
 
 <p>欢迎大家随时提交反馈意见及功能需求，或fork之后new pull request，本人会及时对问题进行回复，<a href="https://github.com/waterWang/cas-server-lab/issues/new">请戳我提交issue。</a></p>
-
-<h2>
-<a id="异常情况测试汇总" class="anchor" href="#%E5%BC%82%E5%B8%B8%E6%83%85%E5%86%B5%E6%B5%8B%E8%AF%95%E6%B1%87%E6%80%BB" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>异常情况测试汇总</h2>
 
 <h2>
 <a id="参考文献" class="anchor" href="#%E5%8F%82%E8%80%83%E6%96%87%E7%8C%AE" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>参考文献</h2>
