Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -69,13 +69,41 @@ base on Cas 4.0.0
 <a id="参考文献--httpswikijasigorgdisplaycasumrestfulapi" class="anchor" href="#%E5%8F%82%E8%80%83%E6%96%87%E7%8C%AE--httpswikijasigorgdisplaycasumrestfulapi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>参考文献  <a href="https://wiki.jasig.org/display/CASUM/RESTful+API">https://wiki.jasig.org/display/CASUM/RESTful+API</a>
 </h5>
 
+<h3>
+<a id="v0004" class="anchor" href="#v0004" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>v0.0.0.4</h3>
+
+<ul>
+<li>[x] <a href="https://github.com/waterWang/cas-server-lab/tree/release-v0.0.0.4">server返回更多user信息给client</a><br>
+</li>
+</ul>
+
+<h5>
+<a id="参考文献" class="anchor" href="#%E5%8F%82%E8%80%83%E6%96%87%E7%8C%AE" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>参考文献</h5>
+
+<pre><code>http://ju.outofmemory.cn/entry/107656  
+http://skyfar666.iteye.com/blog/2275930
+</code></pre>
+
+<h3>
+<a id="v0005" class="anchor" href="#v0005" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>v0.0.0.5</h3>
+
+<ul>
+<li>[x] <a href="https://github.com/waterWang/cas-server-lab/tree/release-v0.0.0.5">REST API方式注册用户</a><br>
+</li>
+<li>[x] <a href="https://github.com/waterWang/cas-server-lab/tree/release-v0.0.0.5">REST API方式修改密码</a>
+</li>
+<li>[x] <a href="https://github.com/waterWang/cas-server-lab/tree/release-v0.0.0.5">REST API方式获取用户信息</a> </li>
+<li>[x] <a href="https://github.com/waterWang/cas-server-lab/tree/release-v0.0.0.5">REST API方式logout</a>
+</li>
+</ul>
+
 <h2>
 <a id="意见反馈" class="anchor" href="#%E6%84%8F%E8%A7%81%E5%8F%8D%E9%A6%88" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>意见反馈</h2>
 
 <p>欢迎大家随时提交反馈意见及功能需求，或fork之后new pull request，本人会及时对问题进行回复，<a href="https://github.com/waterWang/cas-server-lab/issues/new">请戳我提交issue。</a></p>
 
 <h2>
-<a id="参考文献" class="anchor" href="#%E5%8F%82%E8%80%83%E6%96%87%E7%8C%AE" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>参考文献</h2>
+<a id="参考文献-1" class="anchor" href="#%E5%8F%82%E8%80%83%E6%96%87%E7%8C%AE-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>参考文献</h2>
 
 <ol>
 <li> CAS 官网：<a href="http://www.jasig.org/cas">http://www.jasig.org/cas</a>
